pushed old changes for apache cookbooks

--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -3,8 +3,11 @@
            <head>
               <title>node info </title>
            </head>
-           <body>IPADDRESS:<%= node['ipaddress'] %>
+           <body>
+                 <h1>HelloWorld!</h1>
+                 IPADDRESS:<%= node['ipaddress'] %>
                  HOSTNAME:<%= node['hostname'] %>
                  MEMORY:<%= node['memory']['total'] %>
                  CPU:<%= node['cpu']['0']['mhz'] %>
+           <img src="pallavi.jpg" >
 </body></html>
